# 2014-tfg-Andres-Hernandez

./: README.md
2018_3DPathFinder/: 3DPathFollower.py  calibration.xml
2018_Gazebo/: ArDrone_Apriltags_ColorBeacon.world  ArDrone_mixbeacons_house.world  old.ArDrones.world
2018_VisualStates/: (CONSERVAR) escenario_combinado.py  (cal azul_naranja)calibration.xml  (cal morada_naranja)calibration.xml  April  apriltag.py  calibration_simulated.xml  codigo_Landingadaptado_simulated.py  codigo_Precisefunciones_simulated.py  codigo_busquedaEspiral.py  codigo_calibrationTooladaptado.py  codigo_calibrationTooladaptado_simulated_v2.py  codigo_despegueControlado.py  codigo_pose_Stat1.py  codigo_search.py  codigo_search2.py  codigo_variablesl.py  color1  color2  debugging.txt  escenario_combinado(simulador_version_final).xml  escenario_combinado.py  escenario_combinado.xml  escenario_combinado.yml  escenario_combinado2.py  escenario_combinado2.xml  escenario_combinado2.yml  escenario_combinado_a.xml  escenario_combinado_abcd.xml  escenario_combinado_b.xml  escenario_combinado_c.py  escenario_combinado_c.xml  escenario_combinado_c.yml  escenario_combinado_simulated.yml  force_landing.py  force_landing.xml  force_landing.yml  force_landing_ics.yml  force_takeoff.py  force_takeoff.xml  force_takeoff.yml  (+15 more)
2018_calibrationTool/: calibrationtool_py.cfg
Memoria/: 1-Introduccion.aux  1-Introduccion.tex  2-Objetivos.aux  2-Objetivos.tex  3-Infraestructura.aux  3-Infraestructura.tex  4-Desarrollo.aux  4-Desarrollo.tex  5-Experimentos.aux  5-Experimentos.tex  6-Conclusiones.aux  6-Conclusiones.tex  TFG.aux  TFG.ist  TFG.lof  TFG.out  TFG.tex  TFG.toc  _DS_Store  memoPFC.aux  memoPFC.bbl  memoPFC.blg  memoPFC.out  memoPFC.tex  memoPFC.toc
Visor/: refereeViewer.py
gazebo/plugins/car/: CMakeCache.txt  CMakeLists.txt  Makefile  Project.cbp  car_apriltag.world  cmake_install.cmake
(+37 files in other folders)
